--- a/404.md
+++ b/404.md
@@ -1,9 +1,12 @@
 ---
-layout: layouts/home.njk
+layout: layouts/base.njk
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
-# Content not found.
+
+# 404
+
+This was probably a mistake.
 
 Go <a href="{{ '/' | url }}">home</a>.
 
@@ -12,6 +15,6 @@ Read more: https://www.11ty.dev/docs/quicktips/not-found/
 
 This will work for both GitHub pages and Netlify:
 
-* https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/
-* https://www.netlify.com/docs/redirects/#custom-404
-{% endcomment %}
+- https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/
+- https://www.netlify.com/docs/redirects/#custom-404
+  {% endcomment %}
